# QuickQuill-Dictionary-SpellChecker

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  ANGULAR_INTEGRATION.md  CMakeLists.txt  Dockerfile  Makefile  README.md  config.json  config.json.example  dict  dictionary.db  docker-compose.override.yml  docker-compose.yml  documentation.txt  fixed_synonym_function.html  goals.md  goals.txt  input.txt  main.cpp  run_unit_tests  synonym_fix.diff  vcpkg.json
.github/workflows/: ci.yml  deploy.yml
include/: Config.h  Database.h  Dictionary.h  KaikkiImporter.h  SpellChecker.h  Trie.h  Utils.h  WordInfo.h  logging.h
include/app/: Config.h  Config.h.bak
include/core/: Dictionary.h  Dictionary.h.bak  SpellChecker.h  SpellChecker.h.bak  Trie.h  Trie.h.bak
include/data/: Database.h  Database.h.bak  KaikkiImporter.h  RedisCache.h
include/http/: Server.h  Server.h.bak
include/http/dto/: WordResponse.h  WordResponse.h.bak
include/http/handlers/: WordHandler.h
include/http/routes/: WordRoutes.h  WordRoutes.h.bak
include/http/services/: WordService.h  WordService.h.bak
nginx/: default.conf  dev.conf  local.conf  prod-http.conf  prod.conf
nlohmann/: testdb.json
scripts/: build_dictionary_json.sh  check_format.sh  deploy.sh  deploy_dev.sh  deploy_prod.sh  download_dictionary.sh  entrypoint.sh  format.sh  import_extras.py  import_kaikki.py  valgrind.sh
src/: CMakeLists.txt  Database.cpp  Dictionary.cpp  SpellChecker.cpp  Trie.cpp
src/app/: Config.cpp  Config.cpp.bak  main.cpp  main.cpp.bak  main_crow.cpp  main_crow.cpp.bak  main_import.cpp  main_import.cpp.bak
src/core/: Dictionary.cpp  Dictionary.cpp.bak  SpellChecker.cpp  SpellChecker.cpp.bak  Trie.cpp  Trie.cpp.bak
src/data/: Database.cpp  Database.cpp.bak  KaikkiImporter.cpp  KaikkiImporter.cpp.bak  RedisCache.cpp
src/http/: Server.cpp  Server.cpp.bak
src/http/dto/: WordResponse.cpp  WordResponse.cpp.bak
src/http/handlers/: WordHandler.cpp
src/http/routes/: WordRoutes.cpp  WordRoutes.cpp.bak
src/http/services/: WordService.cpp  WordService.cpp.bak
tests/: .clang-tidy  CMakeLists.txt  test_main.cpp.bak
tests/integration/: WordApiIntegration.cpp  WordApiIntegration.cpp.bak
tests/support/: MockDB.h  TestDbFixture.h
tests/unit/: DatabaseTests.cpp  DatabaseTests.cpp.bak  DictionaryConcurrencyTests.cpp  DictionaryTests.cpp  KaikkiImporterTests.cpp  KaikkiImporterTests.cpp.bak  SpellCheckerTests.cpp  TrieTests.cpp  TrieTests.cpp.bak
utils/: random.h
utils/dct/: WordInfo.h  WordInfo.h.bak  dct.h  dct.h.bak
utils/tests/: MockDB.h
web/: history.html  index.html  package-lock.json  package.json  suggestions.html  vite.config.js
web/assets/: fonts.css
web/src/: main.js  style.css  styles.css
web/src/app/: app.html  app.routes.ts  app.ts
web/src/app/models/: autofill-response.ts  word-error.ts  word-form.ts  word-not-found.ts  word-response.ts  word-sense.ts  word.models.ts
web/src/app/pages/dictionary/: dictionary.html  dictionary.spec.ts  dictionary.ts
web/src/app/pages/search-history/: search-history.html  search-history.ts
web/src/app/pages/suggestions/: suggestions.ts
web/src/app/services/: api.ts  search-state.ts  storage.ts
web/src/app/shared/chip/: chip.html  chip.ts
web/src/app/shared/expandable-list/: expandable-list.html  expandable-list.spec.ts  expandable-list.ts
web/src/app/shared/footer/: footer.html
web/src/app/shared/header/: header.html
webJs/: .eslintrc.cjs  history.html  index.html  suggestions.html
webJs/src/: main.js
